--- a/Anhang.tex
+++ b/Anhang.tex
@@ -23,9 +23,12 @@
 \end{figure}
 
 \input{Anhang/AnhangPflichtenheft.tex}
-
 \clearpage
+
 \input{Anhang/AnhangDictionary-Objekte.tex}
+\clearpage
+
+\input{Anhang/AnhangRessourcen.tex}
 \clearpage
 
 \input{Anhang/AnhangScreenshots.tex}
