--- a/Anhang/AnhangPflichtenheft.tex
+++ b/Anhang/AnhangPflichtenheft.tex
@@ -6,47 +6,33 @@
 \begin{enumerate}[itemsep=0em,partopsep=0em,parsep=0em,topsep=0em]
 \item Musskriterien % Wikipedia: für das Produkt unabdingbare Leistungen, die in jedem Fall erfüllt werden müssen
 	\begin{enumerate}
-	\item Modul-Liste: Zeigt eine filterbare Liste der Module mit den dazugehörigen Kerninformationen sowie Symbolen zur Einhaltung des Entwicklungsprozesses an
+	\item ECC System
 		\begin{itemize}
-		\item In der Liste wird der Name, die Bibliothek und Daten zum Source und Kompilat eines Moduls angezeigt.
-		\item Ebenfalls wird der Status des Moduls hinsichtlich Source und Kompilat angezeigt. Dazu gibt es unterschiedliche Status-Zeichen, welche symbolisieren in wie weit der Entwicklungsprozess eingehalten wurde \bzw welche Schritte als nächstes getan werden müssen. So gibt es \zB Zeichen für das Einhalten oder Verletzen des Prozesses oder den Hinweis auf den nächsten zu tätigenden Schritt. 
-		\item Weiterhin werden die Benutzer und Zeitpunkte der aktuellen Version der Sourcen und Kompilate angezeigt. Dazu kann vorher ausgewählt werden, von welcher Umgebung diese Daten gelesen werden sollen. 
-		\item Es kann eine Filterung nach allen angezeigten Daten vorgenommen werden. Die Daten zu den Sourcen sind historisiert. Durch die Filterung ist es möglich, auch Module zu finden, die in der Zwischenzeit schon von einem anderen Benutzer editiert wurden.
+		\item Ein neues Package muss im ECC angelegt werden mit dem Namen /CAMELOT/OC.
+		\item Die AUFK Datenbanktabelle muss um ein Feld mit dem Namen ZZ\_ORDER\_COMMENT erweitert werden
+		\item Ein extra Programm welches eine gefilterte Auswahl an Prozess-, Plan- und Produktions-Aufträgen anzeigt muss erstellt werden.
+		\item Ebenfalls sollen hier jeweils die Kommentare für die Aufträge angezeigt und vom User geändert werden können. 
+		\item Weiterhin soll dieses Programm massenänderungs fähig sein. 
+		\item Außerdem soll es ein zweites Programm geben, in welche der User einen Tabellenfeld der AUFK Datenbanktabelle angeben kann, welches dann für die Kommentare genutzt wird.
+		\item Mittels Input Checks soll verhindert werden, dass der User ein Feld angibt, dass es in der AUFK Tabelle nicht gibt
+		\item Zu aller Letzt soll die COR1-3 erweitert werden.
+		\begin{itemize}
+			\item Ein neues Package muss angelegt werden mit dem Namen ZPP, in welches dann die COR Erweiterung kommt.
+			\item Mittels der cmod Transaktion muss ein neues Projekt mit dem Namen Z\_COR angelegt werden und zwei Erweiterungspunkte hinzugefügt werden (PPCO0007 und PPCO0020).
 		\end{itemize}
-	\item Tag-Liste: Bietet die Möglichkeit die Module anhand von Tags zu filtern. 
+		\end{itemize} 
+	\item APO System. 
 		\begin{itemize}
-		\item Es sollen die Tags angezeigt werden, nach denen bereits gefiltert wird und die, die noch der Filterung hinzugefügt werden könnten, ohne dass die Ergebnisliste leer wird.
-		\item Zusätzlich sollen die Module angezeigt werden, die den Filterkriterien entsprechen. Sollten die Filterkriterien leer sein, werden nur die Module angezeigt, welche mit einem Tag versehen sind.
+		\item Es muss ebenfalls ein neues Package angelegt werden /CAMELOT/OC
+		\item Die /SAPAPO/ORDFLDS muss um ein Feld mit dem Namen Order\_Comment erweitert werden.
+		\item Ebenso wie im ECC System soll es ein Programm geben, welches mittels vom User eingegebener Order Number einen Auftrag mit Kommentar anzeigt, welcher vom User geändert werden kann.
+		\item Desweiteren soll die RRP3 erweitert werden.
+		\begin{itemize}
+			\item Es muss ein neues Package mit dem Namen ZSCM angelegt werden.
+			\item Mittels der se18 muss ein BAdI in diese Package implementiert werden.
+			\item Die Logik muss programmiert werden.
+			\item Eine implizite Erweiterung muss angelegt werden, um die T\_style Tabelle zu manipulieren.
 		\end{itemize}
-	\item Import der Moduldaten aus einer bereitgestellten \acs{CSV}-Datei
-		\begin{itemize}
-		\item Es wird täglich eine Datei mit den Daten der aktuellen Module erstellt. Diese Datei wird (durch einen Cronjob) automatisch nachts importiert.
-		\item Dabei wird für jedes importierte Modul ein Zeitstempel aktualisiert, damit festgestellt werden kann, wenn ein Modul gelöscht wurde.
-		\item Die Datei enthält die Namen der Umgebung, der Bibliothek und des Moduls, den Programmtyp, den Benutzer und Zeitpunkt des Sourcecodes sowie des Kompilats und den Hash des Sourcecodes.
-		\item Sollte sich ein Modul verändert haben, werden die entsprechenden Daten in der Datenbank aktualisiert. Die Veränderungen am Source werden dabei aber nicht ersetzt, sondern historisiert.
-		\end{itemize}
-	\item Import der Informationen aus \ac{SVN}. Durch einen \gqq{post-commit-hook} wird nach jedem Einchecken eines Moduls ein \acs{PHP}-Script auf der Konsole aufgerufen, welches die Informationen, die vom \ac{SVN}-Kommandozeilentool geliefert werden, an \acs{NatInfo} übergibt.
-	\item Parsen der Sourcen
-		\begin{itemize}
-		\item Die Sourcen der Entwicklungsumgebung werden nach Tags, Links zu Artikeln im Wiki und Programmbeschreibungen durchsucht.
-		\item Diese Daten werden dann entsprechend angelegt, aktualisiert oder nicht mehr gesetzte Tags/Wikiartikel entfernt.
-		\end{itemize}
-	\item Sonstiges
-		\begin{itemize}
-		\item Das Programm läuft als Webanwendung im Intranet.
-		\item Die Anwendung soll möglichst leicht erweiterbar sein und auch von anderen Entwicklungsprozessen ausgehen können.
-		\item Eine Konfiguration soll möglichst in zentralen Konfigurationsdateien erfolgen.
 		\end{itemize}
 	\end{enumerate}
-\end{enumerate}
-
-\subsubsection*{Produkteinsatz}
-
-\begin{enumerate}[itemsep=0em,partopsep=0em,parsep=0em,topsep=0em]
-\item{Anwendungsbereiche\\
-Die Webanwendung dient als Anlaufstelle für die Entwicklung. Dort sind alle Informationen für die Module an einer Stelle gesammelt. Vorher getrennte Anwendungen werden ersetzt \bzw verlinkt.}
-\item{Zielgruppen\\
-\NI wird lediglich von den \ac{Natural}-Entwicklern in der EDV-Abteilung genutzt.}
-\item{Betriebsbedingungen\\ % Wikipedia: physikalische Umgebung des Systems, tägliche Betriebszeit, ständige Beobachtung des Systems durch Bediener oder unbeaufsichtigter Betrieb
-Die nötigen Betriebsbedingungen, also der Webserver, die Datenbank, die Versionsverwaltung, das Wiki und der nächtliche Export sind bereits vorhanden und konfiguriert. Durch einen täglichen Cronjob werden entsprechende Daten aktualisiert, die Webanwendung ist jederzeit aus dem Intranet heraus erreichbar.}
 \end{enumerate}
