--- a/Anhang/AnhangProgrammingGuidlines.tex
+++ b/Anhang/AnhangProgrammingGuidlines.tex
@@ -1,2 +1,20 @@
-\subsection{Programming Guidlines}
-\label{app:Programming Guidlines}
+\subsection{programmierrichtlinien}
+\label{app:programmierrichtlinien}
+Im folgenden Abschnitt werden kurz die am häufigsten gebrauchten programmierrichtlinien des CAMELOT ITLabs aufgeführt.
+
+\subsubsection{Bennenung}:
+\paragraph{Variablen}
+Globale Variablen z.B. Variablen in Reports, müssen immer mit einem g(global) anfangen. 
+Lokale Variablen z.B. in Methoden von Klassen, müssen immer mit einem l(local) anfangen.
+
+Darauf folgt dann entweder ein:
+	t für Tabellen
+	s für Strukturen
+	v für Variablen
+	
+Darauf folgt dann ein \_ und ein passender Name welcher die Variable möglichst treffsicher beschreibt.
+
+\paragraph{Klassen}
+Klassen Bezeichnungen starten immer mit dem Paketnamen in welchem sich die Klassen befindet + CL(Class) z.B. /CAMELOT/CL\_OC. Der Paketname ist /CAMELOT/OC und in die Mitte wird ein CL gehängt.
+	
+
