--- a/Bibliographie.bib
+++ b/Bibliographie.bib
@@ -1,9 +1,9 @@
 % This file was created with JabRef 2.4.2.
 % Encoding: UTF8
 
-@BOOKLET{phpDoc,
-  title = {{Wikipedia-Website}},
-  author = {{wikipedia.de}},
+@BOOKLET{Wikipedia,
+  title = {Wikipedia-Website},
+  author = {wikipedia.de},
   lastchecked = {04.12.2018},
   year = {2018},
   owner = {wikipedia},
@@ -11,9 +11,9 @@
   url = {https://de.wikipedia.org/wiki/ABAP/}
 }
 
-@BOOKLET{phpDoc,
-  title = {{SAP.Archive-Website}},
-  author = {{sap.archive}},
+@BOOKLET{SAPArchive,
+  title = {SAP.Archive-Website},
+  author = {SAP.archive},
   lastchecked = {04.12.2018},
   year = {2018},
   owner = {sap},
@@ -21,12 +21,22 @@
   url = {https://archive.sap.com}
 }
 
-@BOOKLET{Symfony,
-  title = {Symfony - Open-Source PHP Web Framework},
-  author = {{Sensio Labs}},
-  lastchecked = {20.04.2010},
-  year = {2010},
-  owner = {grashorn},
-  timestamp = {2010.04.22},
-  url = {http://www.symfony-project.org/}
+@BOOKLET{Fachinformatiker-Anwendugsentwicklung,
+  title = {Fachinformatiker-anwendungsentwickler},
+  author = {Fachinformatiker-Website},
+  lastchecked = {04.12.2018},
+  year = {2018},
+  owner = {},
+  timestamp = {2018.12.4},
+  url = {https://fachinformatiker-anwendungsentwicklung.net/beispiele-fuer-abschlussprojekte/}
+}
+
+@BOOKLET{Tex.stackexchange,
+  title = {Tex.stackexchange},
+  author = {Stackexchange-Website},
+  lastchecked = {04.12.2018},
+  year = {2018},
+  owner = {},
+  timestamp = {2018.12.4},
+  url = {https://tex.stackexchange.com/}
 }
