--- a/Inhalt/Analysephase.tex
+++ b/Inhalt/Analysephase.tex
@@ -13,22 +13,8 @@ Aufgrund der Probleme, die bereits in der Projektbegründung und der Ist-Analyse
 \subsubsection{\gqq{Make or Buy}-Entscheidung}
 \label{sec:MakeOrBuyEntscheidung}
 
-Da es etwas vergleichbares auf dem Markt noch nicht gibt und das Camelot ITLab davon lebt Software zu produzieren und zu verkaufen, würde es natürlich nix bringen die Software zu kaufen. Allerdings stellt sich die Frage selbst produzieren oder von einer fremd Firma oder Freelancern im Namen des Camelot ITLabs entwickeln zu lassen. In der Folgende Tabelle werden alle ausschlaggebenden Punkte welche für die jeweilige Option sprechen aufgeführt.
-
-Camelot Style und programming rechtlinien								Bei Problemen oder nicht einhaltung des Zeitplans
-																	    ist der andere Schuld
-Support nach der fertigstellung muss geklärt werden
-
-Kosten rechnung
-
-Aufgrund der oben genannten Punkte wurde entschieden die Software selber zu produzieren. 
-  
-
-Irwelche Inder kosten  * Zeit.
-Später support schwierig da man entweder die Entwickler halten muss oder sie halt weggehen lässt.
-
-Unkalkulierbare kosten nach Projektabschluss.
-Da wir davon leben Produkte zu entwickeln und zu lizensieren. 
+Da es etwas vergleichbares auf dem Markt noch nicht gibt und das Camelot ITLab davon lebt Software zu produzieren und zu verkaufen, würde es natürlich nix bringen die Software zu kaufen. Allerdings stellt sich die Frage selbst produzieren oder von einer fremd Firma oder Freelancern im Namen des Camelot ITLabs entwickeln zu lassen. In der Folgende Tabelle~\ref{tab:MakeOrBuy} werden alle ausschlaggebenden Punkte welche für die jeweilige Option sprechen aufgeführt.
+\tabelle{Make or Buy Analyse}{tab:MakeOrBuy}{MakeOrBuy}
 
 \subsubsection{Projektkosten}
 \label{sec:Projektkosten}
@@ -106,12 +92,6 @@ Wie in jedem anderen Projekt des Camelot ITLabs gelten auch hier die programming
 
 \subsection{Lastenheft/Fachkonzept}
 \label{sec:Lastenheft}
-\begin{itemize}
-	\item Auszüge aus dem Lastenheft/Fachkonzept, wenn es im Rahmen des Projekts erstellt wurde.
-	\item Mögliche Inhalte: Funktionen des Programms (Muss/Soll/Wunsch), User Stories, Benutzerrollen
-\end{itemize}
-
-\paragraph{Beispiel}
-Ein Beispiel für ein Lastenheft findet sich im \Anhang{app:Lastenheft}. 
+Das Lastenheft findet sich im \Anhang{app:Lastenheft}. 
 
 \Zwischenstand{Analysephase}{Analyse}
