--- a/Inhalt/Einleitung.tex
+++ b/Inhalt/Einleitung.tex
@@ -1,32 +1,25 @@
 % !TEX root = ../Projektdokumentation.tex
 \section{Einleitung}
 \label{sec:Einleitung}
-	Das folgende Projekt ist mein IHK-Abschlussprojekt, welches im Rahmen meiner Ausbildung zum Fachinformatiker im Bereich Anwendungsentwicklung durchgeführt wurde.
-	Vorstellung des Betriebs und meiner Selbst
-
-
+Das folgende Projekt ist mein IHK-Abschlussprojekt, welches im Rahmen meiner Ausbildung zum Fachinformatiker im Bereich Anwendungsentwicklung durchgeführt wurde.
 
 \subsection{Vorstellung des Betriebs und meiner Selbst} 
 \label{sec:Vorstellung des Betriebs und meiner Selbst}
-	Ich habe meine Ausbildung am 01.März 2017 bei der Spreitzenbarth Consultants GmbH angefangen. Einem kleinen Unternehmen mit 50 Mitarbeitern mit Fokus auf Supply Chain Management, dort habe ich hauptsächlich Web Anwendungen mit ASP.NET und AngularJs gemacht. Aufgrund einer Firmen Auflösung habe ich zum 01.06.2018 meinen Ausbildungsbetrieb gewechselt und bin zu Camelot gekommen. Dort habe ich mich dann mit \ac{ABAP} und dem SAP Umfeld betätigt.
-
+Ich habe meine Ausbildung am 01.März 2017 bei der Spreitzenbarth Consultants GmbH angefangen. Einem kleinen Unternehmen mit 50 Mitarbeitern mit Fokus auf Supply Chain Management, dort habe ich hauptsächlich Web Anwendungen mit ASP.NET MVC und AngularJs  und Windows Applikationen mit C\# programmiert. Aufgrund einer Firmen Auflösung habe ich zum 01.06.2018 meinen Ausbildungsbetrieb gewechselt und bin zum Camelot ITLab gewechselt. Dort habe ich mich dann mit \ac{ABAP} und dem gesamten SAP Umfeld betätigt.
 
 \subsection{Projektziel} 
 \label{sec:Projektziel}
-	Im SAP APO bzw. im SAP ECC hat der Planer die Möglichkeit Prozess- oder Plan-aufträge manuell anzulegen. Allerdings gibt es hier keine Möglichkeit eine Notiz oder eine Beschreibung zu schreiben. Das Projektziel ist die Erstellung von Programmen, die dem Planer ermöglichen, Kommentare	für Aufträge zu erstellen und anzusehen. Außerdem sollen bereits vorhandene Programm erweitert werden, um dem Planer den bestmöglichen Komfort zu bieten. Da dieses Projekt ein internes Projekt ist, wurden alle Anforderungen in innerbetrieblichen Besprechungen ausgemacht.  Bei der Implementierung wird darauf geachtet, dass später ein Kommentarverlauf hinzugefügt wird, sodass der Planer auch vorherige Versionen von Kommentaren anschauen kann. 
-
+Im SAP \ac{APO} bzw. im SAP \ac{ECC} hat der Planer die Möglichkeit Prozess-, Produktions- und Plan-Aufträge manuell anzulegen bzw. vorhandene Planaufträge zu editieren. Allerdings gibt es hier keine Möglichkeit eine Notiz oder eine Beschreibung zu hinterlegen. Das Projektziel ist die Erstellung von Programmen, die dem Planer ermöglichen, Kommentare	für Aufträge zu erstellen und anzusehen. Außerdem sollen bereits vorhandene Programm erweitert werden, um dem Planer den bestmöglichen Komfort zu bieten. Da dieses Projekt ein internes Projekt ist, wurden alle Anforderungen in innerbetrieblichen Besprechungen ausgemacht.  Bei der Implementierung wird besonders darauf geachtet, einen leicht zu erweiternden Code zu produzieren, da später ein Kommentarverlauf hinzugefügt werden soll, sodass der Planer auch vorherige Versionen von Kommentaren anschauen kann. 
 
 \subsection{Projektumfeld}
 \label{sec:Projektumfeld}
-	Die Camelot ITLab GmbH ist eine im SAP-Umfeld tätige Unternehmensberatung, die sowohl	funktionale als auch technische Implementierungen von Geschäftsprozessen umsetzt.	Die Abteilung SCM Solution Development innerhalb der Camelot ITLab GmbH, in deren Umfeld	auch dieses Projekt umgesetzt wird, ist für die softwareseitige Implementierung technischer	Anforderungen zuständig. Der Fokus der Abteilung liegt auf Supply Chain Management, im Speziellen Produktions- und Feinplanung.
-	
+Die Camelot ITLab GmbH ist eine im SAP-Umfeld tätige Unternehmensberatung, die sowohl funktionale als auch technische Implementierungen von Geschäftsprozessen umsetzt.	Die Abteilung SCM Solution Development innerhalb der Camelot ITLab GmbH, in deren Umfeld	auch dieses Projekt umgesetzt wird, ist für die softwareseitige Implementierung technischer	Anforderungen zuständig. Der Fokus der Abteilung liegt auf Supply Chain Management, im Speziellen Produktions- und Feinplanung.
 
 \subsection{Projektbeteiligte Personen} 
 \label{sec:Projektbeteiligte Personen}
 Tabelle~\ref{tab:BeteiligtePer} zeigt alle Personen die an dem Projekt beteiligt waren.
 \tabelle{Beteiligte Personen}{tab:BeteiligtePer}{BeteiligtePersonen}
 
-
 \subsection{Projektbegründung} 
 \label{sec:Projektbegruendung}
-Das Projekt wurde von dem Camelot ITLab angenommen, da es eine häufig von Kunden angefragtes Feature ist, welches in der standard SAP Lösung fehlt.   
+Das Projekt wurde von dem Camelot ITLab angenommen, da es ein häufig von Kunden angefragtes und hilfreiches Feature ist, welches in der standard SAP Lösung fehlt.
