--- a/Inhalt/Entwurfsphase.tex
+++ b/Inhalt/Entwurfsphase.tex
@@ -21,7 +21,7 @@ Im ECC werden zwei Datenbank Tabellen erstellt. Zum einen die /CAMELOT/OC\_COMT.
 \begin{figure}[htb]
 \centering
 \includegraphicsKeepAspectRatio{DatabaseTablesECC01.pdf}{0.7}
-\caption{Vereinfachtes ER-Model der /CAMELOT/OC\_COMT}
+\caption{Vereinfachtes Datenbank-Model der /CAMELOT/OC\_COMT}
 \label{fig:ECC01}
 \end{figure} 
 
@@ -30,7 +30,7 @@ Die Tabelle AUFK wird mittels einem Custom Include um ein Feld ZZ\_ORDER\_COMMEN
 \begin{figure}[htb]
 	\centering
 	\includegraphicsKeepAspectRatio{DatabaseTablesECC02.pdf}{0.2}
-	\caption{Vereinfachtes ER-Modell der /CAMELOT/OC\_SET}
+	\caption{Vereinfachtes Datenbank-Modell der /CAMELOT/OC\_SET}
 	\label{fig:ECC02}
 \end{figure} 
 
@@ -39,7 +39,7 @@ Im APO benötigen wir keine Extra Datenbank zum Speichern der Kommentare, da wir
 \begin{figure}[htb]
 	\centering
 	\includegraphicsKeepAspectRatio{DatabaseTablesAPO01.pdf}{0.2}
-	\caption{Vereinfachtes ER-Modell der /SAPAPO/ORDFLDS}
+	\caption{Vereinfachtes Datenbank-Modell der /SAPAPO/ORDFLDS}
 	\label{fig:APO01}
 \end{figure} 
 
@@ -47,15 +47,8 @@ Im APO benötigen wir keine Extra Datenbank zum Speichern der Kommentare, da wir
 \label{sec:Qualitaetssicherung}
 Um die hohen Qualitätsanforderungen der Camelot ITLab zu gewährleisten und die Qualitätsanforderungen des Projekts zu sicher, werden während der laufenden Entwicklung nach jedem Iterationsschritt die neu eingebauten Funktionalitäten getestet. Außerdem wird es mehrere Code Review geben in denen andere Entwickler sich den Code anschauen und gegebenenfalls Schwachstellen erkennen und Verbesserungsvorschläge einbringen. Alle Tests werden manuell durchgeführt.  
 
-
 \subsection{Pflichtenheft/Datenverarbeitungskonzept}
 \label{sec:Pflichtenheft}
-\begin{itemize}
-	\item Auszüge aus dem Pflichtenheft/Datenverarbeitungskonzept, wenn es im Rahmen des Projekts erstellt wurde.
-\end{itemize}
-
-\paragraph{Beispiel}
 Ein Beispiel für das auf dem Lastenheft (siehe Kapitel~\ref{sec:Lastenheft}: \nameref{sec:Lastenheft}) aufbauende Pflichtenheft ist im \Anhang{app:Pflichtenheft} zu finden.
-
 
 \Zwischenstand{Entwurfsphase}{Entwurf}
