--- a/Inhalt/Qualitätssicherung.tex
+++ b/Inhalt/Qualitätssicherung.tex
@@ -1,8 +1,11 @@
 \subsection{Code Reviews während des Projekts}
 \label{Code Reviews während des Projekts}
+Während des Projekts, in der Mitte und am Ende, gab es zwei Code Reviews welche jeweils 1 Stunde lang gingen und wo zwei Mitarbeiter der Entwicklungsabteilung gemeinsam mit dem Auszubildenden über den Code geschaut haben und mögliche Schwachstellen diskutiert und verbessert haben. Außerdem wurden wertvolle Tipps gegeben wie das Programm noch besser umgesetzt werden kann.    
 
 \subsection{Manuelle Tests}
 \label{Manuelle Tests}
+Während der Entwicklungsphase wurde nach jedem Iterationsschritt die neu implementierte Funktionalität getestet und gegebenenfalls verbessert. Diese Tests haben länger als erwartet gebraucht, jedoch konnte der Zeitverlust durch weniger Zeit für die Bug Fixes komprimiert werden, sodass diese Phase länger als die Veranschlagten 6 Stunden gedauert hat. Außerdem wurde nach Abschluss der Entwicklung noch einmal der komplette Funktionsumfang der Anwendung getestet. 
 
 \subsection{Bug Fixing}
 \label{Bug Fixing}
+Alle Bugs die während der Entwicklung aufgefallen sind wurden immer direkt korrigiert bzw. schriftlich vermerkt, sodass keine Fehler in Vergessenheit geraten.
