--- a/Tabellen/BeteiligtePersonen.tex
+++ b/Tabellen/BeteiligtePersonen.tex
@@ -3,7 +3,7 @@
 \rowfont{\bfseries\leavevmode\color{headingfont}}\rowcolor{heading}\textbf{Name} & \textbf{Funktion bzw. Position} & \textbf{Rolle im Projekt} \\
 Thomas Pöhlmann & Auszubildender Fachinformatiker & Projektleiter und Auftragnehmer \\
 & für Anwendungsentwicklung & \\
-\rowcolor{odd}Florian von der Weth & . & Code Review, Auftraggeber \\
-Florian P. & Entwickler & Code Review \\
-\rowcolor{odd}Julian P. & . & Code Review, Auftraggeber \\
+\rowcolor{odd}Florian von der Weth & Senior Consultant & Code Review, Auftraggeber \\
+Florian P. & Junior Consultant & Code Review \\
+\rowcolor{odd}Julian P. & Consultant & Code Review, Auftraggeber \\
 \end{tabu}
