--- a/Transaktionsverzeichnis.tex
+++ b/Transaktionsverzeichnis.tex
@@ -1,6 +1,20 @@
 % !TEX root = Projektdokumentation.tex
 \textbf{COR1-3}:
 \linebreak
-	Diese Transaktion ist zum Erstellen, bearbeiten und anzeigen von Prozess Aufträgen
+Diese Transaktion ist zum Erstellen, bearbeiten und anzeigen von Prozess Aufträgen
 
-\textbf{RRP3}:
+\textbf{SAPAPO/RRP3}:
+\linebreak
+Mithilfe der Produktsicht lassen sich zu einer vorher definierten Produkt-Werks Kombination alle Forcasts, Prozessaufträge, Planaufträge, Produktionsaufträge, Kaufanforderungen und vieles mehr anzeigen lassen.
+
+\textbf{CMOD}:
+\linebreak
+Mittels dieser Transaktion können Erweiterungspunkte ausgewählt und implementiert werden.
+
+\textbf{se18}:
+\linebreak
+Diese Transaktion dient zur Implementierung von \ac{BAdI}s.
+
+\textbf{se80}
+\linebreak
+Die se80 Transaktion ist die am meisten genutzte Transaktion. Mit ihr wird programmiert und es können Datenbanktabellen und Dictionary-Objekte erstellt werden.
